[package]
name = "ranet"
version = "0.12.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "fs" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
rsvici = "*"
clap = { version = "4", features = ["derive"] }
hex = "*"
ipnet = "*"
semver = "*"
thiserror = "*"
indoc = "*"
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = [ "env-filter" ] }
futures = "*"
const-oid = { version = "0.9.6", features = ["db"] }
x509-cert = "*"
ed25519-dalek = { version = "*", features = ["pkcs8", "pem"] }
sha2 = "*"
base64 = "*"

[profile.release]
lto = true
